Implemented Authentication and Authorization: - Added AuthController to handle login requests - Implemented ExternalUserService to fetch all users from the external API - Implemented TokenService to generate JWT tokens - Validation of the JWT tokens is done by ASP.NET Core

--- a/Middleware REST API/appsettings.json
+++ b/Middleware REST API/appsettings.json
@@ -1,4 +1,9 @@
 {
+    "Jwt": {
+        "Issuer": "dummyjson.com",
+        "Audience": "MiddlewareRestApi",
+        "Secret": "fX9I0MA7jSHpndEnDyAgiqp6FBnT9RjY"
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ProductDb;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
